<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity"
    >



    <com.synnapps.carouselview.CarouselView
        android:id='@+id/carouselView'
        android:layout_marginTop="195dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:autoPlay="true"
        app:centered="false"
        app:fillColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/carouselView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#ffffff"
        app:strokeWidth="1dp"
        tools:ignore="MissingConstraints" />
    <!-- app:pageColor="#000000"-->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:text="@string/campañas"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/carouselView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:layout_marginLeft="300dp"
        android:text="@string/ver_mas"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/carouselView"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.synnapps.carouselview.CarouselView
        android:id='@+id/carouselView2'
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="430dp"
        app:autoPlay="true"
        app:fillColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/BottomNavMenu"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#ffffff"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="393dp"
        android:text="@string/hospitales"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/carouselView2"
        app:layout_constraintTop_toBottomOf="@+id/carouselView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="393dp"
        android:layout_marginLeft="300dp"
        android:text="@string/ver_mas"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/carouselView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselView" />











    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorRed"
        app:fabCradleMargin="15dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="6dp"
        app:layout_anchorGravity="center"
        android:layout_gravity="bottom"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:menu="@layout/app_bar_menu"
            app:itemIconTint="#ffffff"
            app:itemTextColor="#ffffff"
            />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorRed"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="35dp"
        app:tint="#ffffff"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/colorRed"
        android:minHeight="?attr/actionBarSize"

        android:theme="?attr/actionBarTheme" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:background="@drawable/nav2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Home"
        android:textColor="#ffffff"
        android:textSize="50sp"
        app:layout_anchor="@+id/toolbar5"
        app:layout_anchorGravity="center"
        android:layout_marginRight="250dp"
        android:layout_marginTop="18dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_marginLeft="330dp"
        app:layout_anchor="@+id/imageView"
        app:layout_anchorGravity="center"
        app:srcCompat="@drawable/ic_outline_login" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>